# veyaan-core-backend

./: .env.docker.example  .env.example  .env.host.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.gateway  Dockerfile.migrate  Dockerfile.worker  Makefile  QA_TEST_PLAN.md  README.md  REMEDIATION_SUMMARY.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  config.py  main.py
app/api/: dependencies.py  domain_errors.py  errors.py  responses.py
app/approvals/: __init__.py  models.py  repository.py  routes.py  schemas.py  service.py
app/audit/: __init__.py  models.py  repository.py  routes.py  schemas.py  service.py
app/auth/: __init__.py  dependencies.py  models.py  routes.py  supabase.py  user_context.py
app/cache/: __init__.py  client.py
app/commands/: __init__.py  models.py  registry.py  repository.py  routes.py  schemas.py  service.py  state_machine.py
app/database/: __init__.py  connection.py  models.py  session.py
app/devices/: __init__.py  models.py  repository.py  routes.py  schemas.py  service.py
app/emergency_stop/: __init__.py  models.py  repository.py  routes.py  schemas.py  service.py
app/events/: __init__.py  nats_client.py  outbox.py  outbox_models.py  subjects.py
app/health/: __init__.py  checks.py  routes.py
app/notifications/: models.py  routes.py  schemas.py  service.py
app/observability/: logging.py  metrics.py
app/protocols/: repositories.py
app/security/: __init__.py  rate_limiter.py
app/storage/: r2_client.py
app/users/: __init__.py  models.py  repository.py  routes.py  service.py
app/utils/: clock.py
app/websocket/: __init__.py  gateway.py  handlers.py
app/workers/: clean_db.py  command_consumer.py  entrypoint.py  outbox_publisher.py  scheduler.py
docs/reports/: baseline_report.md
docs/runbooks/: backup_restore.md  gateway_restart.md  nats_recovery.md
infrastructure/caddy/: Caddyfile  Caddyfile.prod
infrastructure/compose/: docker-compose.dev.yml  docker-compose.prod.yml
infrastructure/monitoring/: alerts.yml  prometheus.yml
migrations/: env.py
scripts/: local-up.sh  smoke-local.sh  wait-healthy.sh
tests/: conftest.py  test_main.py
(+45 files in other folders)
