[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "veyaan-core-backend"
version = "0.1.0"
description = "VEYAAN Core Backend Infrastructure"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.32.0",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "pydantic-extra-types==2.10.0",
    "sqlalchemy[asyncio]==2.0.34",
    "asyncpg==0.29.0",
    "alembic==1.13.2",
    "python-jose[cryptography]==3.3.0",
    "httpx==0.27.2",
    "valkey==6.1.1",
    "nats-py==2.9.0",
    "python-multipart==0.0.9",
    "python-dotenv==1.0.1",
    "structlog==24.1.0",
    "prometheus-client==0.19.0",
    "opentelemetry-api==1.25.0",
    "opentelemetry-sdk==1.25.0",
    "opentelemetry-exporter-otlp==1.25.0",
    "email-validator==2.2.0",
    "pyyaml==6.0.1",
    "cryptography==43.0.0",
    "bcrypt==4.2.0",
    "tenacity==8.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "pytest-cov==5.0.0",
    "ruff==0.6.0",
    "mypy==1.11.0",
    "types-requests==2.31.0",
    "pre-commit==3.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py39"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "T20", # flake8-print
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # function calls in default argument
    "B011",  # assert in tests
]
format = { quote-style = "double" }

[tool.mypy]
python_version = "3.12"
ignore_errors = true
warn_return_any = true
warn_unused_configs = true
enable_error_code = [
    "attr-defined",
    "name-defined",
]
exclude = [
    "migrations",
    "tests",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]